# AI-BizOps-Orchestrator

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  product-prd.md  render.yaml
backend/: pyproject.toml  requirements.txt  server.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/repositories/: storage.py
backend/app/schemas/: common.py  dashboard.py  department.py  diagnosis.py  finding.py  generation.py  interview.py  organization.py  process.py  process_step.py  recommendation.py  tool.py
backend/app/services/: blueprint_service.py  crud_service.py  decomposition_service.py  diagnosis_service.py  discovery_service.py  gemini_service.py  generation_service.py  interview_service.py  recommendation_service.py
backend/tests/: conftest.py  test_decomposition_service.py  test_generation_cache.py  test_health.py  test_interview_diagnosis.py
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-builder.tsx  dashboard-overview.tsx  mermaid-preview.tsx
frontend/lib/: api.ts
supabase/: schema.sql
