[project]
name = "ai-bizops-orchestrator-backend"
version = "0.1.0"
description = "FastAPI backend for AI BizOps Orchestrator"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "supabase==2.15.1",
    "httpx==0.28.1",
    "python-dotenv==1.1.0",
]

[project.scripts]
app = "app.index:app"
